--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="website icon" type="png" href="../imgs/Logo.png" />
-        <link rel="stylesheet" href="../css/w3-main.css" />
+        <link rel="stylesheet" href="css/w3-main.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <style>
@@ -89,8 +89,8 @@
                 
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
-                        <a href="../download/1.rar" download>
-                            <img src="../imgs/projects/1.png" style="width: 100%;" />
+                        <a href="download/1.rar" download>
+                            <img src="imgs/projects/1.png" style="width: 100%;" />
                         </a>Date: 02/2023
                         <p>Requirements:</p>
                         <ul>
@@ -99,8 +99,8 @@
                         </ul>
                     </div>
                     <div class="w3-col s12 m12 l6">
-                        <a href="../download/2.zip" download>
-                            <img src="../imgs/projects/2.png" style="width: 100%;" />
+                        <a href="download/2.zip" download>
+                            <img src="imgs/projects/2.png" style="width: 100%;" />
                         </a>Date: 05/2023
                         <p>Requirements:</p>
                         <ul>
@@ -112,13 +112,13 @@
                 <br>
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
-                        <a href="../download/3.zip" download>
-                            <img src="../imgs/projects/3.png" style="width: 100%;" />
+                        <a href="download/3.zip" download>
+                            <img src="imgs/projects/3.png" style="width: 100%;" />
                         </a>Date: 07/2023
                     </div>
                     <div class="w3-col s12 m12 l6">
-                        <a href="../download/4.rar" download>
-                            <img src="../imgs/projects/4.png" style="width: 100%;" />
+                        <a href="download/4.rar" download>
+                            <img src="imgs/projects/4.png" style="width: 100%;" />
                         </a>Date: 11/2022
                     </div>
                 </div>
