--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> CV - Miguel Sá</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="website icon" type="png" href="../imgs/Logo.png" />
+        <link rel="website icon" type="png" href="imgs/Logo.png" />
         <link rel="stylesheet" href="css/w3-main.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
