--- a/index.html
+++ b/index.html
@@ -121,9 +121,40 @@
                             <img src="imgs/projects/4.png" style="width: 100%;" />
                         </a>Date: 11/2022
                     </div>
+                </div><br>
+                <div class="w3-padding-64">
+                    <h2 class="w3-text-light-grey">Small Jobs</h2>
+                    <p>They are works made in javascript exclusively for the game Trival Wars</p>
+                    <hr style="width: 200px;" class="w3-opacity" />
+                    
+                    <div class="w3-row-padding" style="margin: 0 -16px;">
+                        <div class="w3-col s12 m12 l6">
+                            <p>In-game appearance Trival Wars</p>
+                            <img src="imgs/projects/1s.png" style="width: 100%;" />
+                        </div>
+                        <div class="w3-col s12 m12 l6">
+                            <p>Aspect inside Discord</p>
+                            <img src="imgs/projects/1-1s.png" style="width: 100%;" />
+                        </div>
+                        Date: 08/2023
+                    </div>
+                    <div class="w3-row-padding" style="margin: 0 -16px;">
+                        <div class="w3-col s12 m12 l6">
+                            <p>In-game appearance Trival Wars before pressing calculate</p>
+                            <img src="imgs/projects/2s.png" style="width: 100%;" />
+                        </div>
+                        <div class="w3-col s12 m12 l6">
+                            <p>In-game appearance Trival Wars after pressing calculate</p>
+                            <img src="imgs/projects/2-2s.png" style="width: 100%;" />
+                        </div>
+                        Date: 05/2023
+                    </div>
+                    <hr>
+                    <p>I have more scripts made within the Trival Wars game, but they do not have a user display and therefore are not "visible".</p>
+                    <hr>
                 </div>
-                <!-- End Portfolio Section -->
             </div>
+            <!-- End Portfolio Section -->
 
             <!-- Contact Section -->
             <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
