--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
                         <a href="download/1.rar" download>
-                            <img src="imgs/projects/1.png" style="width: 100%;" />
+                            <img src="imgs/projects/1.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 02/2023
                         <p>Requirements:</p>
                         <ul>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="w3-col s12 m12 l6">
                         <a href="download/2.zip" download>
-                            <img src="imgs/projects/2.png" style="width: 100%;" />
+                            <img src="imgs/projects/2.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 05/2023
                         <p>Requirements:</p>
                         <ul>
@@ -113,12 +113,12 @@
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
                         <a href="download/3.zip" download>
-                            <img src="imgs/projects/3.png" style="width: 100%;" />
+                            <img src="imgs/projects/3.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 07/2023
                     </div>
                     <div class="w3-col s12 m12 l6">
                         <a href="download/4.rar" download>
-                            <img src="imgs/projects/4.png" style="width: 100%;" />
+                            <img src="imgs/projects/4.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 11/2022
                     </div>
                 </div><br>
