--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
-                        <a href="download/1.rar" download>
+                        <a href="projets/project_1.html">
                             <img src="imgs/projects/1.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 02/2023
                         <p>Requirements:</p>
@@ -99,7 +99,7 @@
                         </ul>
                     </div>
                     <div class="w3-col s12 m12 l6">
-                        <a href="download/2.zip" download>
+                        <a href="projets/project_2.html">
                             <img src="imgs/projects/2.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 05/2023
                         <p>Requirements:</p>
@@ -112,12 +112,12 @@
                 <br>
                 <div class="w3-row-padding" style="margin: 0 -16px;">
                     <div class="w3-col s12 m12 l6">
-                        <a href="download/3.zip" download>
+                        <a href="projets/project_3.html">
                             <img src="imgs/projects/3.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 07/2023
                     </div>
                     <div class="w3-col s12 m12 l6">
-                        <a href="download/4.rar" download>
+                        <a href="projets/project_4.html">
                             <img src="imgs/projects/4.png" style="width: 100%;" title="click to download the project" />
                         </a>Date: 11/2022
                     </div>
