--- a/projets/project_2.html
+++ b/projets/project_2.html
@@ -121,7 +121,7 @@
                             <p>Requirements:</p>
                             <ul>
                                 <li> <a href="https://www.apachefriends.org/download.html" target="_blank">XAMPP</a></li>
-                                <li>Change website\php\conecção.php</li>
+                                <li>Change website\php\conecçao.php</li>
                             </ul>
                         </spam>
                     </div>
