--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Exeperience -->
         <link rel="stylesheet" href="css/experiencia.css">
         
-        <!-- Carrosel -->
+        <!-- Footer -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
@@ -72,7 +72,6 @@
                     <div class="w3-bar-block w3-center w3-padding-64">
                       <a href="index.html" class="w3-bar-item w3-button">Home</a>
                       <a href="html/projects.html" class="w3-bar-item w3-button">Projects</a>
-                      <a href="#contact" class="w3-bar-item w3-button">Projects</a>
                     </div>
                 </nav>
                 <div class="w3-opacity small_screen_top">
@@ -110,6 +109,7 @@
             </div>
 
             <!-- Clean -->
+            <!--
             <div class="w3-row clean_main w3-hide-small w3-hide-medium">
                 <div class="w3-col s12 m12 l4 center">
                     <div class="w3-container w3-center clean_box w3-round-xlarge" style="cursor: pointer;">
@@ -132,7 +132,7 @@
                         <h3>Mobile First</h3>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <!-- Time Line -->
             <div class="body w3-padding-64">
