--- a/html/project_3.html
+++ b/html/project_3.html
@@ -124,15 +124,15 @@
                     <div class="w3-row-padding">
                         <div class="w3-section w3-half">
                             <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Esposende, PT</p>
-                            <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +351 968478386</p>
-                            <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: miguelsa96@hotmail.com</p>
+                            <p><a href="tel:+351968478386" style="text-decoration: none;"><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +351 968 478 386</a></p>
+                            <p><a href="mailto:miguelsa96@hotmail.com" style="text-decoration: none;"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"></i> Email: miguelsa96@hotmail.com</a></p>
                         </div>
                         <div class="w3-section w3-half">
                             <p>
-                                <a href="https://www.instagram.com/migsa_96/" target="_blank"><i class="fa fa-instagram fa-fw w3-xxlarge w3-margin-right"></i></a>Instagram
+                                <a href="https://www.instagram.com/migsa_96/" target="_blank" style="text-decoration: none;"><i class="fa fa-instagram fa-fw w3-xxlarge w3-margin-right"></i>Instagram</a>
                             </p>
                             <p>
-                                <a href="https://www.linkedin.com/in/miguel-s%C3%A1-39577a111/" target="_blank"><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"></i></a> Linkedin
+                                <a href="https://www.linkedin.com/in/miguel-s%C3%A1-39577a111/" target="_blank" style="text-decoration: none;"><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"></i>Linkedin</a>
                             </p>
                         </div>
                     </div>
